# tasks

./: .gitignore  CHANGELOG.md  CLI_FINAL_SUMMARY.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_TEST_RESULTS.md  CLI_USAGE.md  Cargo.toml  MS_Graph_TODO_App_Integration.md  README.md  cargo-sources.json  com.github.digit1024.MS_TODO_APP.json  com.github.digit1024.ms-todo-app.json  com.system76.CosmicTasks.json  com.system76.CosmicTasks.yml  dev.edfloreshz.Tasks.json  dev.edfloreshz.Tasks.yml  flatpak-build.sh  generated-sources.json  justfile
.github/: FUNDING.yml
.github/workflows/: flathub.yml  flatpak.yml  pr.yml  push.yml  rust.yml
.zed/: debug.json
cosmic_view/: Cargo.toml  README.md
cosmic_view/src/: app.rs  config.rs  file_manager.rs  image_viewer.rs  main.rs
docs/: CNAME  index.html  style.css
flatpak/: README.md  cargo-sources.json  flatpak-cargo-generator.py  generated-sources.json  requirements.txt
i18n/bg/: tasks.ftl
i18n/cs/: ms_todo_app.ftl  tasks.ftl
i18n/de/: cosmic_tasks.ftl  ms_todo_app.ftl  orderly.ftl  tasks.ftl
i18n/en/: cosmic_tasks.ftl  cosmic_todo.ftl  ms_todo_app.ftl  orderly.ftl  tasks.ftl
i18n/es/: ms_todo_app.ftl  tasks.ftl
i18n/es-419/: tasks.ftl
i18n/es-MX/: ms_todo_app.ftl
i18n/fr/: ms_todo_app.ftl  tasks.ftl
i18n/hi/: ms_todo_app.ftl  tasks.ftl
i18n/hu/: tasks.ftl
i18n/it/: cosmic_tasks.ftl  cosmic_todo.ftl  orderly.ftl  tasks.ftl
i18n/ja/: cosmic_tasks.ftl  cosmic_todo.ftl  orderly.ftl  tasks.ftl
i18n/nl/: ms_todo_app.ftl  tasks.ftl
i18n/pl/: tasks.ftl
i18n/pt/: cosmic_tasks.ftl  cosmic_todo.ftl  orderly.ftl  tasks.ftl
i18n/pt-BR/: ms_todo_app.ftl  tasks.ftl
i18n/pt_BR/: tasks.ftl
i18n/ru/: cosmic_tasks.ftl  orderly.ftl  tasks.ftl
i18n/sr-Cyrl/: cosmic_tasks.ftl  orderly.ftl  tasks.ftl
i18n/sr-Latn/: cosmic_tasks.ftl  orderly.ftl  tasks.ftl
i18n/sv/: ms_todo_app.ftl  tasks.ftl
i18n/tr/: cosmic_tasks.ftl  ms_todo_app.ftl  orderly.ftl  tasks.ftl
i18n/uk/: ms_todo_app.ftl  tasks.ftl
i18n/zh-cn/: ms_todo_app.ftl  tasks.ftl
res/: com.github.digit1024.MS_TODO_APP.desktop  com.github.digit1024.MS_TODO_APP.metainfo.xml  com.github.digit1024.ms-todo-app.desktop  com.github.digit1024.ms-todo-app.metainfo.xml  com.system76.CosmicFiles.desktop  com.system76.CosmicTasks.desktop  com.system76.CosmicTasks.metainfo.xml  com.system76.CosmicTodo.desktop  dev.edfloreshz.Orderly.desktop  dev.edfloreshz.Tasks.desktop  dev.edfloreshz.Tasks.metainfo.xml
resources/: app.desktop
src/: actions.rs  app (Kopiuj 1).rs  app.rs  config.rs  content.rs  details.rs  dialog.rs  error.rs  i18n.rs  icon_cache.rs  key_bind.rs  lib.rs  localize.rs  main.rs  menu.rs  store.rs  todo.rs
src/actions/: list.rs  mod.rs  nav_menu.rs  task.rs
src/app/: actions.rs  config.rs  context.rs  dialog.rs  error.rs  flags.rs  icon_cache.rs  icons.rs  key_bind.rs  localize.rs  markdown.rs  menu.rs  settings.rs  theme.rs
src/app/core/: flags.rs  init.rs  message.rs  mod.rs  model.rs
src/app/dialogs/: dialog.rs  update.rs
src/app/navigation/: actions.rs  helpers.rs  menu.rs  mod.rs  update.rs
src/app/settings/: app.rs  error.rs  mod.rs
src/app/style/: text_editor.rs
src/app/ui/: actions.rs  markdown.rs  menu.rs  mod.rs  update.rs  views.rs
src/auth/: mod.rs  ms_todo_auth.rs  success.html  token_store.rs
src/cli/: commands.rs  mod.rs  output.rs
src/core/: Cargo.toml  config.rs  icons.rs  key_bind.rs  localize.rs  migration.rs  mod.rs  service.rs  storage copy.rs  storage.rs  task_service.rs
src/core/models/: list.rs  priority.rs  status.rs  task.rs
src/core/services/: computer.rs  mod.rs
src/core/services/computer/: engine.rs
src/core/settings/: app.rs  error.rs
src/core/src/: error.rs  lib.rs  service.rs  task_service.rs
src/core/src/models/: list.rs  priority.rs  recurrence.rs  task.rs
src/core/src/services/: computer.rs
src/core/src/services/computer/: engine.rs
src/core/style/: mod.rs  segmented_control.rs  text_editor.rs  text_input.rs
src/features/: mod.rs
src/features/favorites/: favorites.rs  mod.rs  nav.rs
src/features/lists/: content.rs  list.rs  mod.rs  nav.rs
src/features/reminders/: mod.rs  reminder.rs
src/features/search/: search.rs
src/features/settings/: views.rs
src/features/tasks/: details.rs  mod.rs  state.rs  task.rs
src/features/trash/: mod.rs  nav.rs  trash.rs
src/integration/: mod.rs
src/integration/ms_todo/: client.rs  http_client.rs  mapping.rs  mod.rs  models.rs
src/migrations/: migrate.rs  mod.rs  models.rs
src/model/: list.rs  mod.rs  task.rs
src/pages/: content.rs  details.rs  favorites.rs  mod.rs  trash.rs
src/services/: mod.rs  reminder.rs  store.rs
src/shared/: mod.rs
src/shared/dialogs/: dialog.rs  mod.rs  update.rs
src/shared/navigation/: mod.rs
src/shared/navigation/core/: flags.rs  init.rs  message.rs  model.rs
src/shared/navigation/nav/: actions.rs  helpers.rs  update.rs
src/shared/navigation/ui/: actions.rs  menu.rs  mod.rs  update.rs
src/shared/store/: mod.rs  store.rs  watcher.rs
src/shared/store/migrations/: migrate.rs  mod.rs  models.rs
src/shared/widgets/: collapsible_section.rs  markdown.rs  mod.rs
src/shared/widgets/style/: mod.rs  text_editor.rs
src/storage/: cache.rs  migration.rs  mod.rs  notes_crypto.rs
src/storage/models/: checklist_item.rs  list.rs  mod.rs  recurrence.rs  task.rs
src/sync/: caldav.rs  engine.rs  mod.rs  secret.rs
