[package]
name = "tasks"
version = "0.3.0"
edition = "2024"

[dependencies]
i18n-embed-fl = "*"
rust-embed = "*"
open = "*"
dirs = "*"
cli-clipboard = "*"
slotmap = "*"
ron = "*"
thiserror = "*"
tracing = "*"
quick-xml = "*"
icalendar = "*"
base64 = "*"
url = "*"
chacha20poly1305 = "*"
rand = "*"

[dependencies.rfd]
version = "0.16"
default-features = false
features = ["xdg-portal", "tokio"]

[dependencies.keyring]
version = "*"
default-features = false
features = ["sync-secret-service", "crypto-rust"]

[dependencies.reqwest]
version = "*"
default-features = false
features = ["rustls-tls", "gzip"]

[dependencies.tracing-subscriber]
version = "*"
features = ["env-filter"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["multi-window", "tokio", "winit", "about", "wayland", "wgpu"]

[dependencies.i18n-embed]
version = "0.16.0"
features = ["fluent-system", "desktop-requester"]

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.chrono]
version = "*"
features = ["serde"]

[dependencies.uuid]
version = "1.18.1"
features = ["v4"]

[patch."https://github.com/smithay/client-toolkit.git"]
sctk = { package = "smithay-client-toolkit", version = "*" }

# [patch."https://github.com/pop-os/libcosmic.git"]
# libcosmic = { path = "../../edfloreshz-ext/libcosmic" }
