[package]
name = "cosmic-view"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core libcosmic dependencies
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", branch = "master", default-features = false, features = ["multi-window", "tokio", "winit", "about", "wgpu"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }