[package]
name = "cosmic-tasks-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.87"
ron = "0.8.1"
anyhow = "1.0.66"
tracing = "0.1.37"
async-trait = "0.1.68"
libset = "0.1.6"
emojis = "0.6.1"
dirs = "5.0.1"
derive-getters = "0.3.0"
derive_setters = "0.1.6"

[dependencies.serde]
version = "1.0.147"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.uuid]
version = "1.2.1"
features = ["v4"]
