[package]
name = "done_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
diesel = { version = "2.0.2", features = ["sqlite", "chrono", "r2d2"] }
chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0.66"
uuid = { version = "1.2.1", features = ["v4"] }
diesel_migrations = "2.0.0"
tracing = "0.1.37"
strum = "0.25"
strum_macros = "0.25.2"
async-trait = "0.1.68"
url = "2.3.1"
futures = "0.3"
libset = "0.1.6"
emojis = "0.6.1"
ron = "0.6.1"
dirs = "5.0.1"
